# Skein

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  tsconfig.electron.json  vite.config.ts
.github/: release.yml
desktop-backend/: Cargo.toml
desktop-backend/icons/: icon.icns
desktop-backend/src/: app_identity.rs  error.rs  events.rs  lib.rs  sidecar.rs  state.rs
desktop-backend/src/commands/: conversation.rs  git_review.rs  system.rs  terminal.rs  voice.rs  workspace.rs
desktop-backend/src/domain/: conversation.rs  git_review.rs  mod.rs  settings.rs  shortcuts.rs  voice.rs  workspace.rs
desktop-backend/src/infrastructure/: database.rs  mod.rs
desktop-backend/src/runtime/: claude.rs  codex_paths.rs  collaboration_mode_templates.rs  item_store.rs  mod.rs  proposed_plan_markup.rs  protocol.rs  protocol_tests.rs  session.rs  session_tests.rs  snapshot_store.rs  supervisor.rs
desktop-backend/src/runtime/collaboration_mode_templates/: plan.md
desktop-backend/src/services/: composer.rs  git.rs  mod.rs  open.rs  project_config.rs  prompt_naming.rs  pull_requests.rs  terminal.rs  thread_titles.rs  workspace.rs  worktree_names.rs  worktree_scripts.rs
desktop-backend/src/services/composer/: claude.rs
desktop-backend/src/services/git/: action_runner.rs  actions.rs  diff.rs  status.rs
desktop-backend/src/services/pull_requests/: github.rs
electron/: main.ts  (+22 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_identity.rs  lib.rs  main.rs  menu.rs  serde_helpers.rs  state.rs
src-tauri/src/commands/: conversation.rs  git_review.rs  mod.rs  system.rs  terminal.rs  workspace.rs
src-tauri/src/domain/: conversation.rs  mod.rs  settings.rs  shortcuts.rs  terminal.rs  workspace.rs
src-tauri/src/infrastructure/: database.rs  images.rs
src-tauri/src/runtime/: codex_paths.rs  mod.rs  protocol.rs  protocol_tests.rs  session.rs  session_tests.rs  supervisor.rs
src-tauri/src/services/: browser_proxy.rs  composer.rs  git.rs  mod.rs  open.rs  prompt_naming.rs  pull_requests.rs  terminal.rs  thread_titles.rs  voice.rs  workspace.rs  worktree_scripts.rs
src-tauri/src/services/git/: actions.rs
(+291 files in other folders)
