[package]
name = "skein"
version = "0.1.15"
description = "Skein is a local-first macOS desktop app for Codex with native review, plans, approvals, and Git workflows"
authors = ["Paul Bouzian"]
edition = "2021"

[lib]
name = "skein_lib"
crate-type = ["rlib"]
doctest = false

[dependencies]
base64 = "0.22"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "json", "multipart", "rustls"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["serde", "v7"] }
which = "8"
portable-pty = "0.9"
